# SandboxEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  render-doc-home.cap
libs/FastNoiseLite/: CMakeLists.txt
libs/glfw3webgpu/: glfw3webgpu.c
libs/imgui/: CMakeLists.txt
libs/imguizmo/: CMakeLists.txt  ImGuizmo.cpp
libs/stb/: CMakeLists.txt  stb_image_write.cpp
libs/webgpu/: webgpu.cmake
shaders/: atmosphere.frag  atmosphere.vert  cloth.frag  cloth.vert  clouds.frag  clouds.vert  grid.frag  grid.vert
src/: VolumetricClouds.h  main.cpp  pch.h
src/Application/: Application.cpp  Application.h  ClothParticleSystem.cpp  Editor.cpp  Editor.h  Input.cpp  Input.h  Runtime.cpp  Runtime.h  WeatherSystem.cpp  WeatherSystem.h
src/Core/: Core.h  Math.h  Node.h  Scene.h
src/Renderer/: AtmosphereRenderer.cpp  AtmosphereRenderer.h  BindGroup.cpp  BindGroup.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandEncoder.cpp  CommandEncoder.h  Device.cpp  Device.h  GridRenderer.cpp  GridRenderer.h  ImGuiManager.cpp  ImGuiManager.h  Queue.cpp  Queue.h  RenderPassEncoder.cpp  RenderPassEncoder.h  Renderer.cpp  Renderer.h  ShaderModule.cpp  ShaderModule.h  Surface.cpp  Surface.h  TextureView.cpp  TextureView.h
src/Renderer/Cloth/: ClothParticleSystem.cpp  ClothParticleSystem.h  ClothRenderer.cpp  ClothRenderer.h
src/Renderer/Clouds/: CloudBounds.cpp  CloudBounds.h  CloudModel.cpp  CloudModel.h  CloudRenderer.cpp  CloudRenderer.h
src/Renderer/Components/: BindGroup.cpp  BindGroup.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandEncoder.cpp  CommandEncoder.h  ComputePassEncoder.cpp  ComputePassEncoder.h  ComputePipeline.cpp  ComputePipeline.h  Device.cpp  Device.h  QuerySet.cpp  QuerySet.h  Queue.cpp  Queue.h  RenderPassEncoder.cpp  RenderPassEncoder.h  RenderPipeline.cpp  RenderPipeline.h  Sampler.cpp  Sampler.h  ShaderModule.cpp  ShaderModule.h  Surface.cpp  Surface.h  Texture.cpp  Texture.h  TextureView.cpp  TextureView.h
src/Renderer/Sky/: AtmosphereRenderer.cpp  AtmosphereRenderer.h  CloudModel.cpp  CloudModel.h  CloudRenderer.cpp  CloudRenderer.h
src/Renderer/UI/: ImGuiManager.cpp  ImGuiManager.h  UIRenderer.h
src/Renderer/Utils/: Profiler.cpp  Profiler.h
src/Systems/Weather/: CloudsModel.cpp  CloudsModel.h  WeatherSystem.cpp  WeatherSystem.h
src/Utils/: FileReader.cpp  FileReader.h  FreeCamera.cpp  FreeCamera.h  HashUtils.h
